Corrected Shellcheck warnings

--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -14,6 +14,7 @@
 ## COLUMNS AND LINES
 
 # Writing the command substitution text when the text mode is processed.
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintTextModeCmdSubs__FNCT" "$1" "$1"; }
 
 # -----------------------------------------------
@@ -21,12 +22,15 @@ function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "$__BU_MODULE_I
 ## TEXT FORMATTING
 
 # Writing the command substitution text when a formatting is defined.
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintFormatCmdSubs__FNCT" "$1"; }
 
 # Writing the command substitution text when a resetting is defined.
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintResetCmdSubs__FNCT" "$1"; }
 
 # Writing the command substitution text when a total resetting is defined.
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintAllResetCmdSubs__FNCT"; }
 
 # -----------------------------------------------
