--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -14,6 +14,7 @@
 ## TEXT PRINTING
 
 # Writing the command substitution text for the return values definitions.
+# shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.PrintReturnValue { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__PrintReturnValue_FNCT" "$1"; }
 
 # -----------------------------------------------
