--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -195,7 +195,7 @@ else
 
     # The possible absence of this file is managed below.
     fi
-
+    echo "PATH = $__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH";
     # Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
     if [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
         __BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH")";
@@ -277,7 +277,7 @@ else
 
         ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
 
-        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $(( LINENO - 7 )) --> ERROR !" >&2; echo >&2;
+        echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $(( LINENO - 6 )) --> ERROR !" >&2; echo >&2;
 
         echo "The Bash Utils's root folder's path storage file « $____v_bu_module_init__bu_main_root_dir_path__chk_err » doesn't exists" >&2; echo >&2;
         echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
