Translated the "Time.conf" file

--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -33,7 +33,8 @@
 __BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %H:%M:%S")";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
-	"This command substitution executes the « date » command, and passes arguments in order to print the date at the « YYYY-MM-DD hh-mm-ss » format"  \
+	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE"  \
+	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -52,5 +53,6 @@ v_time_conf_date_display_color_3="$(tput setaf 78)";
 __BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1" "[ $v_time_conf_date_display_color_2$__BU_MAIN_TIME_DATE$v_time_conf_date_display_color_3 ]")";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
-	"This command substitution prints the output of the « __BU_MAIN_TIME_DATE » command substitution, with more decoration in order to display the date in an easily and colored readable log format : [ YYYY-MM-DD hh-mm-ss ]" \
+	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE_DISPLAY" \
+	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
