Adding new variable types in the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function, and adding descriptions about these variables types for the terminal display

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -123,9 +123,9 @@ __BU_MAIN_PROJECT_ALIAS_FILE_PARENT="$__BU_MODULE_INIT__ROOT";
 __BU_MAIN_PROJECT_ALIAS_FILE_NAME="Aliases.sh";
 __BU_MAIN_PROJECT_ALIAS_FILE_PATH="$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT/$__BU_MAIN_PROJECT_ALIAS_FILE_NAME";
 
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_PARENT'    "$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT"  'Dirpath'   "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_PARENT"  "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_NAME'      "$__BU_MAIN_PROJECT_ALIAS_FILE_NAME"    'File'      "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_NAME"    "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
-DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_PATH'      "$__BU_MAIN_PROJECT_ALIAS_FILE_PATH"    'Filepath'  "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_PATH"    "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_PARENT'      "$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT"  'Dirpath'   "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_PARENT"  "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_NAME'        "$__BU_MAIN_PROJECT_ALIAS_FILE_NAME"    'File'      "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_NAME"    "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ALIAS_FILE_PATH'        "$__BU_MAIN_PROJECT_ALIAS_FILE_PATH"    'Filepath'  "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__BU_MAIN_PROJECT_ALIAS_FILE_PATH"    "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
 
 # -------
 
