--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -35,7 +35,7 @@ __BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %H:%M:%S")";
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
 	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE"  \
 	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
-	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -55,4 +55,4 @@ __BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1" "[ $
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
 	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE_DISPLAY" \
 	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
-	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
