--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -98,7 +98,7 @@ fi
 __BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")" || {
     BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$(LINENO - 1)" 'E_BUINIT__BU_MAIN_MODCONFIG__CANNOT_GET_PROJECT_PARENT_DIR';
 
-    BU.ModuleInit.MsgAbort; echo lll;
+    BU.ModuleInit.MsgAbort;
 
     BU.ModuleInit.AskPrintLog >&2 || {
         if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
