Corrected the bug that made the use of debug variables impossible, in the "install/.Bash-utils/config/initializer/Status.conf" file

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -6,16 +6,17 @@
 
 # Project's debug variable
 
-# This variable only accepts "true" or "false" as values.
-# Default value : "false"
+# This variable only accepts "true", "false" or an empty string as values.
+# DO NOT uncomment this variable here, it will mess with the
+# Default value : "false" (if not processed in the "Bash-utils-init.sh" file)
 
 # shellcheck disable=SC2034
-__BU_MODULE_INIT_STAT_DEBUG="false"
+# __BU_MODULE_INIT_STAT_DEBUG="false";
 
 
 # Advanced project's debug variable
 
-# This variable accepts "file", "category", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
+# This variable accepts "category", "file", "function", "module", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
 # if the value of the "$__BU_MODULE_INIT_STAT_DEBUG" status global variable is equal to 'true'.
 # Default value : "file"
 
@@ -111,7 +112,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY
     # -----------------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == m?(od?(ule?))?(s) ]]; then
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == m?(od?(ule))?(s) ]]; then
 
         # The accepted values are the neame of every modules.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every modules.
