Improving the modules debugger

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -4,10 +4,10 @@
 # shellcheck disable=SC2034
 
 
-# Project's debug variable
+# Modules debug variable
 
 # This variable only accepts "true", "false" or an empty string as values.
-# DO NOT uncomment this variable here, it will mess with the
+# DO NOT uncomment this variable here, it will mess with the "BU.Main.Echo.Debug()" function from the main module.
 # Default value : "false" (if not processed in the "Bash-utils-init.sh" file)
 
 # shellcheck disable=SC2034
@@ -37,7 +37,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
     # -------------------------------------
 
-    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == cat?(eg?(ory)) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == cat?(eg?(orie))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'C' ]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == c?(at?(eg?(ory))) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == c?(at?(eg?(orie)))?(s) ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'C' ]; then
 
         # Each accepted value is written under each category name, in each library file.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every categores.
@@ -57,12 +57,13 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXCatConf;
+    fi
 
     # ---------------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY
     # ---------------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == file?(s) ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'F' ]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == fi?(l?(e))?(s) ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'F' ]; then
 
         # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
@@ -77,17 +78,18 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
 
         # Else, you can manually fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=('Echo.lib');
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXFilesConf;
+    fi
 
     # -------------------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY
     # -------------------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == function?(s) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == FNCT?(S) ]]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == fun?(c?(t?(ion))?(s)) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == FN?(C?(T))?(S) ]]; then
 
         # The accepted values are the name of each function you want to debug.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
@@ -102,17 +104,18 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
 
         # Else, you can manually fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=();
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("BU.Main.Echo.Newstep");
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXFNCTConf;
+    fi
 
     # -----------------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY
     # -----------------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == m?(od?(ule))?(s) ]]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == m?(od?(ule))?(s) ]]; then
 
         # The accepted values are the neame of every modules.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every modules.
@@ -129,12 +132,13 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         else
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY=();
         fi
+    fi
 
     # -----------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
     # -----------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == s?(ub)?(-)c?(at?(eg?(ory))) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == s?(ub)?(-)?(c?(at?(eg?(orie))))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'S' ]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == s?(ub)?(-)c?(at?(eg?(ory))) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == s?(ub)?(-)?(c?(at?(eg?(orie)))?(s)) ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" == 'S' ]; then
         # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
 
