Return of the stable compiled files

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -7,7 +7,7 @@
 # Modules debug variable
 
 # This variable only accepts "true", "false" or an empty string as values.
-# DO NOT uncomment this variable here, it will mess with the "BU.Main.Echo.Debug()" function from the main module.
+# DO NOT uncomment this variable here, its value will be (re)assigned to false, and will mess with the "BU.Main.Echo.Debug()" function from the main module.
 # Default value : "false" (if not processed in the "Bash-utils-init.sh" file)
 
 # shellcheck disable=SC2034
