Updating the variables descriptor string and beginning of the compliance of the code with good coding practices

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 tmp/
 
 # Compiled versions of the framework.
-install/.Bash-utils/compiled/stable/*
+# install/.Bash-utils/compiled/stable/*
 install/.Bash-utils/compiled/unstable/*
 
 
