Compliance of the code with good coding practices AND Rewriting of the "Colors.conf" files for a better maintainability

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -17,14 +17,14 @@
 # Advanced project's debug variable
 
 # This variable accepts "category", "file", "function", "module", "sub-category" "subcategory" (both last values do the same thing) or nothing as values,
-# if the value of the "$__BU_MODULE_INIT_STAT_DEBUG" status global variable is equal to 'true'.
+# if the value of the "${__BU_MODULE_INIT_STAT_DEBUG}" status global variable is equal to 'true'.
 # Default value : "file"
 
-if [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'false' ]; then
+if [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'false' ]; then
     # shellcheck disable=SC2034
     __BU_MODULE_INIT_STAT_DEBUG_BASHX="";
 
-elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
+elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
     # Declare a variable to easily change the location of the parent directory of the status configuration files.
     ____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir="status";
@@ -47,8 +47,8 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         BashXCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXCat.conf";
 
         # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXCatConf" ] && [ -s "$BashXCatConf" ]; then
-            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT < "$BashXCatConf";
+        if [ -f "${BashXCatConf}" ] && [ -s "${BashXCatConf}" ]; then
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT < "${BashXCatConf}";
 
         # Else, you can manually fill the following array with values.
         else
@@ -73,8 +73,8 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         BashXFilesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFiles.conf";
 
         # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXFilesConf" ] && [ -s "$BashXFilesConf" ]; then
-            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "$BashXFilesConf";
+        if [ -f "${BashXFilesConf}" ] && [ -s "${BashXFilesConf}" ]; then
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "${BashXFilesConf}";
 
         # Else, you can manually fill the following array with values.
         else
@@ -99,8 +99,8 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         BashXFNCTConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFNCT.conf";
 
         # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXFNCTConf" ] && [ -s "$BashXFNCTConf" ]; then
-            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "$BashXFNCTConf";
+        if [ -f "${BashXFNCTConf}" ] && [ -s "${BashXFNCTConf}" ]; then
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY < "${BashXFNCTConf}";
 
         # Else, you can manually fill the following array with values.
         else
@@ -125,8 +125,8 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         BashXModulesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXModules.conf";
 
         # If the "BashXModules.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXModulesConf" ] && [ -s "$BashXModulesConf" ]; then
-            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY < "$BashXModulesConf";
+        if [ -f "${BashXModulesConf}" ] && [ -s "${BashXModulesConf}" ]; then
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_MODULES_ARRAY < "${BashXModulesConf}";
 
         # Else, you can manually fill the following array with values.
         else
@@ -147,8 +147,8 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" == 'true' ]; then
         BashXSubCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXSubCat.conf";
 
         # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXSubCatConf" ] && [ -s "$BashXSubCatConf" ]; then
-            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT < "$BashXSubCatConf";
+        if [ -f "${BashXSubCatConf}" ] && [ -s "${BashXSubCatConf}" ]; then
+            mapfile -t __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT < "${BashXSubCatConf}";
 
         # Else, you can manually fill the following array with values.
         else
