--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -550,7 +550,7 @@ alias BU.EchoYellow='BU.Main.Echo.Yellow';
 
 #### CATEGORY : "LINE BREAKS"
 
-## SUB-CATEGORY : "LINE BREAKS ACCORDING TO THE ''$__BU_MAIN_PROJECT_LOG_FILE_PATH'' VARIABLE VALUE"
+## SUB-CATEGORY : "LINE BREAKS ACCORDING TO THE ''${__BU_MAIN_PROJECT_LOG_FILE_PATH}'' VARIABLE VALUE"
 
 alias BU.Newline='BU.Main.Echo.Newline';
 
@@ -826,7 +826,7 @@ alias BU.HeaderVioletCMD='BU.Main.Headers.Header.CMD.Violet';
 ## BICOLOR HEADERS
 
 # Copy-paste this alias to avoid losing time while creating bicolor headers :
-# alias BU.Header<col1><col2>   { BU.HeaderBase "$__BU_MAIN_COLOR_<COLOR1>" "$__BU_MAIN_TXT_CHAR_HEADER_LINE" "$__BU_MAIN_COLOR_<COLOR2>"
+# alias BU.Header<col1><col2>   { BU.HeaderBase "${__BU_MAIN_COLOR_<COLOR1>}" "${__BU_MAIN_TXT_CHAR_HEADER_LINE}" "${__BU_MAIN_COLOR_<COLOR2>}"
 
 ## AQUA BLUE LINES, DIFFERENTLY COLORED TEXT
 
